--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -91,55 +91,54 @@
 
   </header><!-- End Header -->
 
-  <!-- ======= Sidebar ======= -->
-  <aside id="sidebar" class="sidebar">
+    <!-- ======= Sidebar ======= -->
+    <aside id="sidebar" class="sidebar">
 
-    <ul class="sidebar-nav" id="sidebar-nav">
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="web3edi_index.html">
-          <i class="bi bi-grid"></i>
-          <span>Home</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="web3edi_student.html">
-          <i class="bi bi-grid"></i>
-          <span>Your Student Dashboard</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="web3edi_recorded_learning.html">
-          <i class="bi bi-grid"></i>
-          <span>Recorded Learning</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="web3edi_live_learning.html">
-          <i class="bi bi-grid"></i>
-          <span>Live Learning</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="web3edi_instructor.html">
-          <i class="bi bi-grid"></i>
-          <span>Your Instructor Dashboard</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="web3edi_live_teaching.html">
-          <i class="bi bi-grid"></i>
-          <span>Live Teaching</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-
-    </ul>
-  </aside><!-- End Sidebar-->
-
+      <ul class="sidebar-nav" id="sidebar-nav">
+  
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="index.html">
+            <i class="bi bi-grid"></i>
+            <span>Home</span>
+          </a>
+        </li><!-- End Dashboard Nav -->
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="student_dashboard.html">
+            <i class="bi bi-grid"></i>
+            <span>Your Student Dashboard</span>
+          </a>
+        </li><!-- End Dashboard Nav -->
+  
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="student_recorded_learning.html">
+            <i class="bi bi-grid"></i>
+            <span>Recorded Learning</span>
+          </a>
+        </li><!-- End Dashboard Nav -->
+  
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="student_live_learning.html">
+            <i class="bi bi-grid"></i>
+            <span>Live Learning</span>
+          </a>
+        </li><!-- End Dashboard Nav -->
+  
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="instructor_dashboard.html">
+            <i class="bi bi-grid"></i>
+            <span>Your Instructor Dashboard</span>
+          </a>
+        </li><!-- End Dashboard Nav -->
+  
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="web3edi_live_teaching.html">
+            <i class="bi bi-grid"></i>
+            <span>Live Teaching</span>
+          </a>
+        </li><!-- End Dashboard Nav -->
+  
+      </ul>
+    </aside><!-- End Sidebar-->
   <main id="main" class="main">
 
     <div class="pagetitle">
