--- a/ui/index.html
+++ b/ui/index.html
@@ -157,10 +157,10 @@
 
           <!-- Card with an image on top -->
           <div class="card">
-            <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+            <img src="assets/img/laptop.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card with an image on top</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Learn the basics of Python</h5>
+              <p class="card-text">In this course  I am going to show you all the necessary information you need to start building aplications with the usage of Python. Worry no more! After a month you will be able to call yourself a programmer!</p>
               <p>Course Fee : 35 DAI</p>
               <p>School Discount : 5%</p>
               <p class="card-text"><a href="#" class="btn btn-primary">Buy Now</a></p>
