--- a/ui/index.html
+++ b/ui/index.html
@@ -174,10 +174,10 @@
 
           <!-- Card with an image on top -->
           <div class="card">
-            <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+            <img src="assets/img/nice picture.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card with an image on top</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Become a proffesional artist in three weeks!</h5>
+              <p class="card-text">Have you ever wonder how could anyone paint something as realistic as Mona Lisa? Well, with the help of this course you will become a better artist in a week guaranteed. Will you ever be able to paint as well as Leonardo da Vinci? Only time will tell, but this course is a great start!</p>
               <p>Course Fee : 15 DAI</p>
               <p>School Discount : 15%</p>
               <p class="card-text"><a href="#" class="btn btn-primary">Buy Now</a></p>
