--- a/ui/index.html
+++ b/ui/index.html
@@ -195,7 +195,7 @@
             <img src="assets/img/code.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Become a Web3 developer</h5>
-              <p class="card-text">World is changing fast and it doesn't wait for anyone. Don't let yourself be left behind! Upgrade your skills from Web2 to Web3 and enjoy building blockchain applications.</p>
+              <p class="card-text">World is changing fast and it doesn't wait for anyone. Don't let yourself be left behind! Upgrade your skills from Web2 to Web3 and enjoy building blockchain applications!</p>
               <p>Course Fee : 25 DAI</p>
               <p>School Discount : 10%</p>
               <p class="card-text"><a href="#" class="btn btn-primary">Buy Now</a></p>
@@ -209,10 +209,10 @@
 
           <!-- Card with an image on top -->
           <div class="card">
-            <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+            <img src="assets/img/video editing.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card with an image on top</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Edit videos like a Pro!</h5>
+              <p class="card-text">Ever got caught by a YouTube ad in the middle of your favourite video? Ever wondered how in the world these companies are able to make such ads work? And most importantly how to even edit like this? This course will show you not only that, but all the magic tricks of video editing. Next time it will be your video ad, that you will be paid for by a company!</p>
               <p>Course Fee : 10 DAI</p>
               <p>School Discount : 100%</p>
               <p class="card-text"><a href="#" class="btn btn-primary">Buy Now</a></p>
