--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -183,7 +183,7 @@
                       <i class="bi bi-cart"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>145</h6>
+                      <h6>45</h6>
                       <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
@@ -254,7 +254,7 @@
                       <i class="bi bi-people"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>124</h6>
+                      <h6>24</h6>
                       <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
 
                     </div>
@@ -272,8 +272,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Royal College</h5></center>
-                <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Knights of Programming</h5></center>
+                <img src="assets/img/school_badge-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <table> 
                     <tr> 
@@ -297,8 +297,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Royal College</h5></center>
-                <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Craftsmen of Tommorow</h5></center>
+                <img src="assets/img/school_badge-6.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <table> 
                     <tr> 
@@ -322,8 +322,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Royal College</h5></center>
-                <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Royal Dragons</h5></center>
+                <img src="assets/img/school_badge-5.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <table> 
                     <tr> 
