--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -354,7 +354,7 @@
               <div class="row g-0">
                 
                 <div class="col-md-4">                
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
