--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -358,7 +358,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Web 3 Learning with Royal</h5>
+                    <h5 class="card-title">Web 3 App Development Part 1</h5>
                     <p class="card-text"><a href="#" class="btn btn-success">Start</a></p>
                   </div>
                 </div>
@@ -370,11 +370,11 @@
             <div class="col-xxl-4 col-md-6">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-5.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Web 3 Learning with Royal</h5>
+                    <h5 class="card-title">Project Management Basics</h5>
                     <p class="card-text"><a href="#" class="btn btn-success">Continue</a></p>
                     <p class="card-text"><a href="#" class="btn btn-danger">Cancel</a></p>
                   </div>
@@ -385,11 +385,11 @@
             <div class="col-xxl-4 col-md-6">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-6.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Web 3 Learning with Royal</h5>
+                    <h5 class="card-title">Sharp Graphic Design</h5>
                     <p class="card-text"><a href="#" class="btn btn-info">Mint</a></p>
                     <p class="card-text"><a href="#" class="btn btn-outline-danger">Close</a></p>
                   </div>
