--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -322,7 +322,7 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Royal Dragons</h5></center>
+                <center><h5 class="card-title">Dragons of Sharp Design</h5></center>
                 <img src="assets/img/school_badge-5.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <table> 
@@ -389,7 +389,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Sharp Graphic Design</h5>
+                    <h5 class="card-title">How to make the graphic stand out?</h5>
                     <p class="card-text"><a href="#" class="btn btn-info">Mint</a></p>
                     <p class="card-text"><a href="#" class="btn btn-outline-danger">Close</a></p>
                   </div>
