--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -358,7 +358,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Web 3 App Development Part 1</h5>
+                    <h5 class="card-title">Web 3 App Development</h5>
                     <p class="card-text"><a href="#" class="btn btn-success">Start</a></p>
                   </div>
                 </div>
@@ -389,7 +389,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">How to make the graphic stand out?</h5>
+                    <h5 class="card-title">Everything about sharp graphic design</h5>
                     <p class="card-text"><a href="#" class="btn btn-info">Mint</a></p>
                     <p class="card-text"><a href="#" class="btn btn-outline-danger">Close</a></p>
                   </div>
@@ -405,7 +405,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1-gold.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -413,7 +413,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-2-gold.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -422,7 +422,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-3-gold.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -430,7 +430,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1-silver.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -438,7 +438,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-3-silver.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -447,7 +447,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-2-silver.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -455,7 +455,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-4-silver.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -463,7 +463,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-3-brown.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -472,7 +472,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1-brown.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -480,7 +480,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-4-brown.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -488,7 +488,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-2-brown.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
