--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -497,7 +497,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-6-brown.png" class="img-fluid rounded-start" alt="...">
                 </div>          
               </div>
             </div>
@@ -511,7 +511,7 @@
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
                 <center><h5 class="card-title">Certificate of Completion</h5></center>
-                <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+                <img src="assets/img/medal_of_completion_school_bage-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <p class="card-text">
                   <br/>
