--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -510,8 +510,8 @@
             <center><h3>Your Certificates</h3></center>
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Certificate of Completion</h5></center>
-                <img src="assets/img/medal_of_completion_school_bage-1.jpg" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Learn HTML - completed</h5></center>
+                <img src="assets/img/medal_of_completion_school_bage-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                 <p class="card-text">
                   <br/>
@@ -530,8 +530,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Certificate of Competence</h5></center>
-                <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Build Web3 App - completed</h5></center>
+                <img src="assets/img/medal_of_completion_school_bage-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">
                     <br/>
@@ -550,8 +550,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Royal College</h5></center>
-                <img src="assets/img/card.jpg" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Learn to paint - completed</h5></center>
+                <img src="assets/img/medal_of_completion_school_bage-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">
                     <br/>
