--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -510,7 +510,7 @@
             <center><h3>Your Certificates</h3></center>
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Learn HTML - completed</h5></center>
+                <center><h5 class="card-title">Learn the basics of HTML - completed</h5></center>
                 <img src="assets/img/medal_of_completion_school_bage-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                 <p class="card-text">
@@ -530,8 +530,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Build Web3 App - completed</h5></center>
-                <img src="assets/img/medal_of_completion_school_bage-2.png" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Learn the basics of Java Script - completed</h5></center>
+                <img src="assets/img/medal_of_completion_school_bage-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">
                     <br/>
@@ -550,8 +550,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-                <center><h5 class="card-title">Learn to paint - completed</h5></center>
-                <img src="assets/img/medal_of_completion_school_bage-3.png" class="card-img-top" alt="...">
+                <center><h5 class="card-title">Everything about sharp graphic design - completed</h5></center>
+                <img src="assets/img/medal_of_completion_school_bage-5.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">
                     <br/>
