--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -516,8 +516,7 @@
                 <p class="card-text">
                   <br/>
                 This Certifies that User: 0x0000000000000000000000000000
-                has successfully completed the requirements of the Web 3 
-                IPFS / Filecoin Decentralized Storage course. 
+                has successfully completed the requirements of the "Learn the basics of HTML" course by 0x0000000000000000000000000000 on Web3Edi. 
                 Completion Date: 01/04/2022
                 Status: Passed
                 </p>
@@ -536,8 +535,7 @@
                   <p class="card-text">
                     <br/>
                   This Certifies that User: 0x0000000000000000000000000000
-                  has successfully completed the requirements of the Web 3 
-                  IPFS / Filecoin Decentralized Storage course. 
+                  has successfully completed the requirements of the "Learn the basics of Java Script" course by 0x0000000000000000000000000000 on Web3Edi. 
                   Completion Date: 01/04/2022
                   Status: Passed
                   </p>
@@ -556,8 +554,7 @@
                   <p class="card-text">
                     <br/>
                   This Certifies that User: 0x0000000000000000000000000000
-                  has successfully completed the requirements of the Web 3 
-                  IPFS / Filecoin Decentralized Storage course. 
+                  has successfully completed the requirements of the "Everything about sharp graphic design" course by 0x0000000000000000000000000000 on Web3Edi. 
                   Completion Date: 01/04/2022
                   Status: Passed
                   </p>
@@ -572,7 +569,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-4.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
@@ -586,7 +583,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
@@ -601,7 +598,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-2.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
@@ -615,7 +612,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
@@ -629,7 +626,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
@@ -644,7 +641,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
