--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -657,7 +657,7 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
                   April  (2022 - 2023)
@@ -668,10 +668,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-2-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  June  (2024 - 2025)
                 </div>        
               </div>
             </div>
@@ -679,10 +679,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-3-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  February  (2022 - 2023)
                 </div>        
               </div>
             </div>
@@ -690,10 +690,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-4-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  October  (2021 - 2022)
                 </div>        
               </div>
             </div>
@@ -701,10 +701,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-6-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  September  (2022 - 2023)
                 </div>        
               </div>
             </div>
@@ -713,10 +713,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-2-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  August  (2022 - 2023)
                 </div>        
               </div>
             </div>
@@ -724,10 +724,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-3-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  December  (2022 - 2023)
                 </div>        
               </div>
             </div>
@@ -735,10 +735,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-4-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  March  (2022 - 2023)
                 </div>        
               </div>
             </div>
@@ -746,10 +746,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-6-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  January  (2022 - 2023)
                 </div>        
               </div>
             </div>
@@ -757,10 +757,10 @@
            <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-4-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                April  (2022-2023)
+                July  (2022-2023)
                 </div>        
               </div>
             </div>
@@ -768,10 +768,10 @@
             <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-1-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                  April  (2022 - 2023)
+                  December  (2022 - 2023)
               
                 </div>        
               </div>
@@ -781,10 +781,10 @@
         <div class="col-xxl-2 col-md-4">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="assets/img/school_badge-3-old.png" class="img-fluid rounded-start" alt="...">
                 </div>  
                 <div class="col-md-8">
-                April  (2022 - 2023)
+                June  (2023 - 2024)
                 </div>        
               </div>
             </div>
