--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -822,7 +822,7 @@
                   <div class="activite-label">32 min</div>
                   <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
                   <div class="activity-content">
-                    Quia quae rerum <a href="#" class="fw-bold text-dark">explicabo officiis</a> beatae
+                    Minted the course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script.</a>
                   </div>
                 </div><!-- End activity item-->
 
@@ -830,7 +830,7 @@
                   <div class="activite-label">56 min</div>
                   <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
                   <div class="activity-content">
-                    Voluptatem blanditiis blanditiis eveniet
+                    The course <a href="#" class="fw-bold text-dark"></a>Learn the basics of Java Script</a> is now available for minting.
                   </div>
                 </div><!-- End activity item-->
 
@@ -838,7 +838,7 @@
                   <div class="activite-label">2 hrs</div>
                   <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
                   <div class="activity-content">
-                    Voluptates corrupti molestias voluptatem
+                    Certificate from a course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script</a> is now available for minting.
                   </div>
                 </div><!-- End activity item-->
 
@@ -846,7 +846,7 @@
                   <div class="activite-label">1 day</div>
                   <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
                   <div class="activity-content">
-                    Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
+                    Completed a course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script</a> by <a href="#" class="fw-bold text-dark">0x0000000000000000000000000000.</a>
                   </div>
                 </div><!-- End activity item-->
 
@@ -854,7 +854,7 @@
                   <div class="activite-label">2 days</div>
                   <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
                   <div class="activity-content">
-                    Est sit eum reiciendis exercitationem
+                    Completed the section <a href="#" class="fw-bold text-dark">Part 9 Finishing Thoughts</a> in the course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script.</a>
                   </div>
                 </div><!-- End activity item-->
 
@@ -862,7 +862,7 @@
                   <div class="activite-label">4 weeks</div>
                   <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
                   <div class="activity-content">
-                    Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
+                    Joined <a href="#" class="fw-bold text-dark"></a>Craftsmen of Tommorow</a> school.
                   </div>
                 </div><!-- End activity item-->
 
