--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -830,7 +830,7 @@
                   <div class="activite-label">56 min</div>
                   <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
                   <div class="activity-content">
-                    The course <a href="#" class="fw-bold text-dark"></a>Learn the basics of Java Script</a> is now available for minting.
+                    The course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script</a> is now available for minting.
                   </div>
                 </div><!-- End activity item-->
 
@@ -846,7 +846,7 @@
                   <div class="activite-label">1 day</div>
                   <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
                   <div class="activity-content">
-                    Completed a course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script</a> by <a href="#" class="fw-bold text-dark">0x0000000000000000000000000000.</a>
+                    Completed a course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script.</a>
                   </div>
                 </div><!-- End activity item-->
 
@@ -862,7 +862,7 @@
                   <div class="activite-label">4 weeks</div>
                   <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
                   <div class="activity-content">
-                    Joined <a href="#" class="fw-bold text-dark"></a>Craftsmen of Tommorow</a> school.
+                    Joined <a href="#" class="fw-bold text-dark">Craftsmen of Tommorow</a> school.
                   </div>
                 </div><!-- End activity item-->
 
