--- a/ui/student_dashboard.html
+++ b/ui/student_dashboard.html
@@ -827,7 +827,7 @@
                 </div><!-- End activity item-->
 
                 <div class="activity-item d-flex">
-                  <div class="activite-label">56 min</div>
+                  <div class="activite-label">2 days</div>
                   <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
                   <div class="activity-content">
                     The course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script</a> is now available for minting.
@@ -835,7 +835,7 @@
                 </div><!-- End activity item-->
 
                 <div class="activity-item d-flex">
-                  <div class="activite-label">2 hrs</div>
+                  <div class="activite-label">2 days</div>
                   <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
                   <div class="activity-content">
                     Certificate from a course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script</a> is now available for minting.
@@ -843,7 +843,7 @@
                 </div><!-- End activity item-->
 
                 <div class="activity-item d-flex">
-                  <div class="activite-label">1 day</div>
+                  <div class="activite-label">2 days</div>
                   <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
                   <div class="activity-content">
                     Completed a course <a href="#" class="fw-bold text-dark">Learn the basics of Java Script.</a>
@@ -908,37 +908,37 @@
           <div class="card">    
 
             <div class="card-body pb-0">
-              <h5 class="card-title">W3Edi News &amp; Updates <span>| Today</span></h5>
+              <h5 class="card-title">Web3Edi News &amp; Updates <span>| Today</span></h5>
 
               <div class="news">
                 <div class="post-item clearfix">
                   <img src="assets/img/news-1.jpg" alt="">
-                  <h4><a href="#">Nihil blanditiis at in nihil autem</a></h4>
-                  <p>Sit recusandae non aspernatur laboriosam. Quia enim eligendi sed ut harum...</p>
+                  <h4><a href="#">We have reached 10,000 unique instructors on Web3Edi!</a></h4>
+                  <p>This is a very proud day for the Web3Edi team. We can't stress enough how gratefull we are for...</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-2.jpg" alt="">
-                  <h4><a href="#">Quidem autem et impedit</a></h4>
-                  <p>Illo nemo neque maiores vitae officiis cum eum turos elan dries werona nande...</p>
+                  <h4><a href="#">Web3Edi was mentioned on Cointelegraph</a></h4>
+                  <p>Whenever you have a time, check the newest articule on Cointelegraph...</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-3.jpg" alt="">
-                  <h4><a href="#">Id quia et et ut maxime similique occaecati ut</a></h4>
-                  <p>Fugiat voluptas vero eaque accusantium eos. Consequuntur sed ipsam et totam...</p>
+                  <h4><a href="#">Competition for Schools started</a></h4>
+                  <p>We have officially started the contest for the best school in our community...</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-4.jpg" alt="">
-                  <h4><a href="#">Laborum corporis quo dara net para</a></h4>
-                  <p>Qui enim quia optio. Eligendi aut asperiores enim repellendusvel rerum cuder...</p>
+                  <h4><a href="#">New Partnership!</a></h4>
+                  <p>Web3Edi just started a new partnership with a famous crypto project...</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-5.jpg" alt="">
-                  <h4><a href="#">Et dolores corrupti quae illo quod dolor</a></h4>
-                  <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
+                  <h4><a href="#">New discord channels opened!</a></h4>
+                  <p>After the feedback from the community, we have decided that...</p>
                 </div>
 
               </div><!-- End sidebar recent posts-->
