--- a/ui/student_recorded_learning.html
+++ b/ui/student_recorded_learning.html
@@ -289,35 +289,35 @@
                       <tr>
                         <th scope="row"><a href="#">#2457</a></th>
                         <td>Brandon Jacob</td>
-                        <td><a href="#" class="text-primary">Learn the basics of Python</a></td>
+                        <td><a href="#" class="text-primary">Part 5 Code your first website</a></td>
                         <td>$64</td>
                         <td><span class="badge bg-success">Approved</span></td>
                       </tr>
                       <tr>
                         <th scope="row"><a href="#">#2147</a></th>
                         <td>Bridie Kessler</td>
-                        <td><a href="#" class="text-primary">Learn the basics of Python</a></td>
+                        <td><a href="#" class="text-primary">Part 3 The language</a></td>
                         <td>$47</td>
                         <td><span class="badge bg-warning">Pending</span></td>
                       </tr>
                       <tr>
                         <th scope="row"><a href="#">#2049</a></th>
                         <td>Ashleigh Langosh</td>
-                        <td><a href="#" class="text-primary">Learn the basics of Python</a></td>
+                        <td><a href="#" class="text-primary">Part 5 Code your first website</a></td>
                         <td>$147</td>
                         <td><span class="badge bg-success">Approved</span></td>
                       </tr>
                       <tr>
                         <th scope="row"><a href="#">#2644</a></th>
                         <td>Angus Grady</td>
-                        <td><a href="#" class="text-primar">Learn the basics of Python</a></td>
+                        <td><a href="#" class="text-primar">Part 4 The first excercise</a></td>
                         <td>$67</td>
                         <td><span class="badge bg-danger">Rejected</span></td>
                       </tr>
                       <tr>
                         <th scope="row"><a href="#">#2644</a></th>
                         <td>Raheem Lehner</td>
-                        <td><a href="#" class="text-primary">Learn the basics of Python</a></td>
+                        <td><a href="#" class="text-primary">Part 3 The language</a></td>
                         <td>$165</td>
                         <td><span class="badge bg-success">Approved</span></td>
                       </tr>
@@ -361,7 +361,7 @@
 
                 <div class="post-item clearfix">
                   <img src="assets/img/section-3.jpg" alt="">
-                  <h4><a href="#">Part 3 The Language</a></h4>
+                  <h4><a href="#">Part 3 The language</a></h4>
                   <p>Get to know your first "words" in Python and slowly start to "talk"...</p>
                 </div>
 
@@ -373,7 +373,7 @@
 
                 <div class="post-item clearfix">
                   <img src="assets/img/section-5.jpg" alt="">
-                  <h4><a href="#">Part 5 Code your first webstie</a></h4>
+                  <h4><a href="#">Part 5 Code your first website</a></h4>
                   <p>Now you have everything required to make your first website...</p>
                 </div>
 
