--- a/ui/instructor_dashboard.html
+++ b/ui/instructor_dashboard.html
@@ -170,8 +170,8 @@
                     <div class="card info-card sales-card">
 
                         <div class="card-body">
-                            <img src="assets/img/school_badge.png" class="img-fluid rounded-start" />
-                            <h5 class="card-title">Instructor School </h5>
+                            <img src="assets/img/school_badge-1.jpg" class="img-fluid rounded-start" />
+                            <h5 class="card-title">Knights of Programming </h5>
 
                         </div>
 
@@ -259,9 +259,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/section-2.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
+                            Learn the basics of Python
                         </div>
                     </div>
                 </div>
