--- a/ui/student_live_learning.html
+++ b/ui/student_live_learning.html
@@ -373,7 +373,7 @@
                   <div class="activite-label">4 min</div>
                   <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
                   <div class="activity-content">
-                    <a href="#" class="fw-bold text-dark">BillyJunior:</a> Could you reapeat what you just said? <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
+                    <a href="#" class="fw-bold text-dark">BillyJunior:</a> Could you reapeat what you just said?
                   </div>
                 </div><!-- End activity item-->
 
