--- a/ui/instructor_dashboard.html
+++ b/ui/instructor_dashboard.html
@@ -270,9 +270,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/section-3.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
+                            Learn the basics of HTML
                         </div>
                     </div>
                 </div>
@@ -282,9 +282,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/section-4.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
+                            Learn the basics of Java Script
                         </div>
                     </div>
                 </div>
@@ -293,9 +293,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/section-5.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
+                            Learn the basics of CSS
                         </div>
                     </div>
                 </div>
@@ -304,9 +304,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/course-1.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
+                            Learn the basics of React
                         </div>
                     </div>
                 </div>
@@ -315,9 +315,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/course-3.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
+                            Drips with Radicle
                         </div>
                     </div>
                 </div>
@@ -325,32 +325,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/course-4.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xxl-2 col-md-4">
-                    <div class="card info-card sales-card">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
-                            </div>
-                            Royals
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-xxl-2 col-md-4">
-                    <div class="card info-card sales-card">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
-                            </div>
-                            Royals
+                            L2 with Polygon
                         </div>
                     </div>
                 </div>
@@ -359,20 +336,9 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/course-5.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xxl-2 col-md-4">
-                    <div class="card info-card sales-card">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
-                            </div>
-                            Royals
+                            The Graph Querie
                         </div>
                     </div>
                 </div>
@@ -382,9 +348,43 @@
                     <div class="card info-card sales-card">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="assets/img/card.jpg" class="img-fluid rounded-start" alt="...">
+                                <img src="assets/img/course-6.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            Royals
+                            Filecoin deals Advanced
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xxl-2 col-md-4">
+                    <div class="card info-card sales-card">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/img/course-7.jpg" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            How to build dapps on Hedera
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xxl-2 col-md-4">
+                    <div class="card info-card sales-card">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/img/course-8.jpg" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            How to make AMM on Ethereum
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-xxl-2 col-md-4">
+                    <div class="card info-card sales-card">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/img/course-9.jpg" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            How to build a DAO
                         </div>
                     </div>
                 </div>
