--- a/ui/instructor_dashboard.html
+++ b/ui/instructor_dashboard.html
@@ -361,7 +361,7 @@
                             <div class="col-md-4">
                                 <img src="assets/img/course-7.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            How to build dapps on Hedera
+                            NFT basics
                         </div>
                     </div>
                 </div>
@@ -372,7 +372,7 @@
                             <div class="col-md-4">
                                 <img src="assets/img/course-8.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            How to make AMM on Ethereum
+                            DEFI 2.0
                         </div>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
                             <div class="col-md-4">
                                 <img src="assets/img/course-9.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            How to build a DAO
+                            Web3 for DAOs
                         </div>
                     </div>
                 </div>
@@ -415,7 +415,7 @@
                                 <div class="col-sm-10">
                                     <select class="form-select" aria-label="Default select example">
                                   <option selected>Select Course to Edit</option>
-                                  <option value="1">0x00000000000000000000000000000000000000 - Web 3 for DAOs</option>
+                                  <option value="1">0x00000000000000000000000000000000000000 - Web3 for DAOs</option>
                                   <option value="2">0x00000000000000000000000000000000000000 - DeFi 2.0</option>
                                   <option value="3">0x00000000000000000000000000000000000000 - NFT basics</option>
                                 </select>
