--- a/ui/instructor_dashboard.html
+++ b/ui/instructor_dashboard.html
@@ -338,7 +338,7 @@
                             <div class="col-md-4">
                                 <img src="assets/img/course-5.jpg" class="img-fluid rounded-start" alt="...">
                             </div>
-                            The Graph Querie
+                            The Graph Queries
                         </div>
                     </div>
                 </div>
